Make sure to use normalised paths
    Non-heiracial maven project layouts may
    result in paths with ../ path seperators,
    which causes problems with directory escape
    detection.

    Fixes #9515